Implement Revise and a stubby first version of AC-3. Functionality not confirmed.